# TeleStream

./: .dockerignore  .gitattributes  .gitignore  404.html  LICENSE  README.md  docker-compose.render.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
adr/0001-kafka-as-event-backbone/: index.html
adr/0002-spark-structured-streaming/: index.html
adr/0003-dual-storage-postgres-parquet/: index.html
adr/0004-docker-compose-single-machine/: index.html
architecture/: index.html
dashboards/: customer.json  executive.json  generate_dashboards.py  network.json  pipeline.json  sales.json
dashboards/provisioning/dashboards/: dashboards.yml
dashboards/provisioning/datasources/: datasources.yml
data-model/: index.html
docker/kafka/: create-topics.sh
docker/producer/: Dockerfile
docker/spark/: Dockerfile
docs/: architecture.md  data-model.md  event-schemas.md  index.md  planning.md
docs/adr/: 0001-kafka-as-event-backbone.md  0002-spark-structured-streaming.md  0003-dual-storage-postgres-parquet.md  0004-docker-compose-single-machine.md
event-schemas/: index.html
monitoring/: alerts.yml  prometheus.yml
planning/: index.html
producer/telestream_producer/: __init__.py  base.py  calls.py  catalog.py  config.py  contracts.py  main.py  network.py  publisher.py  recharges.py  registry.py  subscribers.py  usage.py
quality/: __init__.py  run_checks.py  suites.py
scripts/: capture_dashboards.sh
search/: search_index.json
spark/: streaming_job.py
spark/telestream_spark/: __init__.py  rules.py  schemas.py  sinks.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_quality.py  test_recovery.py
tests/unit/: test_contracts.py  test_dashboards.py  test_generators.py  test_package.py  test_rules.py  test_run_loop.py  test_schema_sync.py  test_schema_violations.py  test_seeds.py  test_sinks.py
warehouse/: generate_seeds.py  schema.sql  seeds.sql
