[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "telestream"
version = "0.1.0"
description = "Enterprise-inspired telecom streaming data platform: Kafka, Spark, PostgreSQL, Grafana"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "kafka-python>=2.0.2",
    "pandera>=0.20",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "psycopg2-binary>=2.9",
    "pandas-stubs>=2.2",
    "types-psycopg2>=2.9",
    "great_expectations>=1.3",
]

[tool.setuptools.packages.find]
where = ["producer"]

[tool.setuptools.package-dir]
"" = "producer"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["producer", "spark", "warehouse", "dashboards", "quality"]

[[tool.mypy.overrides]]
module = ["kafka.*", "pandera.*", "pyspark.*", "great_expectations.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# GE 1.x re-exports its expectation classes without __all__; strict mode's
# no-implicit-reexport flags every gxe.Expect* reference.
module = ["quality.suites"]
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: requires the docker compose stack",
]
